# delpyc

./: LICENSE  README.md  __init__.py  main.py  pyproject.toml
